# HUD

./: .gitignore  CMakeLists.txt  LICENSE  README.md  aarch64-pkg-config-wrapper.sh  aarch64.toolchain.cmake
include/core/: Application.h  Mode.h  ModeManager.h
include/managers/: GPIOManager.h  IMUManager.h  InputManager.h  RenderManager.h  SceneManager.h  VideoManager.h
include/modes/: ARMode.h  DebugMode.h  MenuMode.h  VideoStreamMode.h
include/windows/: TextWindow.h  Window.h
scripts/: imu_reader.py
src/: main.cpp
src/core/: Application.cpp  ModeManager.cpp
src/managers/: GPIOManager.cpp  IMUManager.cpp  InputManager.cpp  RenderManager.cpp  SceneManager.cpp  VideoManager.cpp
src/modes/: ARMode.cpp  DebugMode.cpp  MenuMode.cpp  VideoStreamMode.cpp
src/windows/: TextWindow.cpp
